--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,4 +49,25 @@ body::-webkit-scrollbar-thumb {
   outline: 1px solid slategrey;
 }
 
+.link-text {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
 
+.link-text::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.13rem; 
+  background-color: #70809075; 
+  transform: scaleX(0); 
+  transform-origin: left;
+  transition: transform 0.3s ease; 
+}
+
+.link-text:hover::before {
+  transform: scaleX(1); 
+}
