--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.animation {
+  animation: defilement-rtl 15s infinite linear;
+}
+
+@keyframes defilement-rtl {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   min-height: 100vh;
@@ -33,13 +48,13 @@ body::-webkit-scrollbar-thumb {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 0.13rem; 
-  background-color: #70809075; 
-  transform: scaleX(0); 
+  height: 0.13rem;
+  background-color: #70809075;
+  transform: scaleX(0);
   transform-origin: left;
-  transition: transform 0.3s ease; 
+  transition: transform 0.3s ease;
 }
 
 .link-text:hover::before {
-  transform: scaleX(1); 
+  transform: scaleX(1);
 }
