--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,19 +40,27 @@ body::-webkit-scrollbar-thumb {
   position: relative;
   overflow: hidden;
   display: inline-block;
+  z-index: 1;
+  color: #000;
+  transition: color 0.3s ease;
 }
 
 .link-text::before {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: 1px;
   left: 0;
   width: 100%;
-  height: 0.13rem;
-  background-color: #70809075;
+  height: 0.4rem;
+  background-color: #aaa1a196;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.3s ease;
+  z-index: -1;
+}
+
+.link-text:hover {
+  color: rgb(104, 98, 98);
 }
 
 .link-text:hover::before {
