--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,8 @@ body::-webkit-scrollbar-thumb {
   transition: color 0.3s ease;
 }
 
+;
+
 .link-text::before {
   content: "";
   position: absolute;
@@ -65,4 +67,17 @@ body::-webkit-scrollbar-thumb {
 
 .link-text:hover::before {
   transform: scaleX(1);
+}
+
+.skew-button {
+  display: flex;
+  padding: 10px 45px;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-size: 40px;
+  color: white;
+  background: #6225E6;
+  transition: 1s;
+  box-shadow: 6px 6px 0 black;
+  transform: skewX(-15deg);
 }
