--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,3 +81,52 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 6px 6px 0 black;
   transform: skewX(-15deg);
 }
+
+/* DESKTOP */
+
+.carrousel-pictures>img {
+  width: 100%;
+  height: 25rem;
+  object-fit: cover;
+  border-radius: 10px;
+  mix-blend-mode: normal
+}
+
+.carrousel-pictures {
+  position: relative;
+}
+
+.carrousel-leftArrow {
+  position: absolute;
+  left: 13px;
+  top: 44%;
+  cursor: pointer
+}
+
+.carrousel-rightArrow {
+  position: absolute;
+  right: 13px;
+  top: 44%;
+  cursor: pointer
+}
+
+.carrousel-leftArrow img,
+.carrousel-rightArrow img {
+  width: 43px
+}
+
+
+/* MOBILE */
+
+@media screen and (max-width: 768px) {
+
+  .carrousel-leftArrow img,
+  .carrousel-rightArrow img {
+    width: 11px
+  }
+
+  .carrousel-pictures>img {
+    height: 255px;
+    border-radius: 10px
+  }
+}
