--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,6 @@ body::-webkit-scrollbar-thumb {
   transition: color 0.3s ease;
 }
 
-;
 
 .link-text::before {
   content: "";
@@ -69,24 +68,11 @@ body::-webkit-scrollbar-thumb {
   transform: scaleX(1);
 }
 
-.skew-button {
-  display: flex;
-  padding: 10px 45px;
-  text-decoration: none;
-  font-family: 'Poppins', sans-serif;
-  font-size: 40px;
-  color: white;
-  background: #6225E6;
-  transition: 1s;
-  box-shadow: 6px 6px 0 black;
-  transform: skewX(-15deg);
-}
-
 /* DESKTOP */
 
 .carrousel-pictures>img {
   width: 100%;
-  height: 25rem;
+  height: 28rem;
   object-fit: cover;
   border-radius: 15px;
   mix-blend-mode: normal
@@ -94,6 +80,8 @@ body::-webkit-scrollbar-thumb {
 
 .carrousel-pictures {
   position: relative;
+ 
+  border-radius: 15px;
 }
 
 .carrousel-leftArrow {
@@ -110,23 +98,16 @@ body::-webkit-scrollbar-thumb {
   cursor: pointer
 }
 
-.carrousel-leftArrow img,
-.carrousel-rightArrow img {
-  width: 43px
-}
-
-
 /* MOBILE */
 
 @media screen and (max-width: 768px) {
-
-  .carrousel-leftArrow img,
-  .carrousel-rightArrow img {
-    width: 11px
-  }
-
   .carrousel-pictures>img {
     height: 255px;
-    border-radius: 10px
+ 
+  }
+
+  .carrousel-pictures {
+    position: relative;
+    top: 0;
   }
 }
