--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 5px;
+  width: 10px;
 }
 
 body::-webkit-scrollbar-track {
@@ -41,7 +41,7 @@ body::-webkit-scrollbar-thumb {
   overflow: hidden;
   display: inline-block;
   z-index: 1;
-  color: #000;
+  color: #000000;
   transition: color 0.3s ease;
 }
 
@@ -53,7 +53,7 @@ body::-webkit-scrollbar-thumb {
   left: 0;
   width: 100%;
   height: 0.4rem;
-  background-color: #aaa1a196;
+  background-color: #7080905f;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.3s ease;
@@ -61,9 +61,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 .link-text:hover {
-  color: rgb(104, 98, 98);
+  color: #708090;
 }
 
 .link-text:hover::before {
   transform: scaleX(1);
+}
+
+.fill-red-300 {
+  fill: red;
+  transition: fill 0.2s;
 }
