--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,10 @@ body::-webkit-scrollbar-thumb {
   color: red;
 }
 
-
-input::placeholder {
-  color: rgba(0, 0, 0, 0.619);
+.dialog-enter {
+  transform: translateY(-100%);
+}
+.dialog-enter-active {
+  transform: translateY(0);
+  transition: transform 0.3s;
 }
